--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -14,13 +14,13 @@
                     <li><i class="fas fa-angle-right"></i><a href="/about/" class="link-hover-style-1 ml-1"> About Us</a></li>
                     <li><i class="fas fa-angle-right"></i><a href="/coaching/" class="link-hover-style-1 ml-1"> Coaching</a></li>
                     <li><i class="fas fa-angle-right"></i><a href="/blog/" class="link-hover-style-1 ml-1"> Blog</a></li>
-                    <li><i class="fas fa-angle-right"></i><a href="/contact-us.html" class="link-hover-style-1 ml-1"> Contact Us</a></li>
+                    <li><i class="fas fa-angle-right"></i><a href="/contact/" class="link-hover-style-1 ml-1"> Contact Us</a></li>
                 </ul>
             </div>
             <div class="col-6 col-lg-2 mb-5 mb-lg-0">
                 <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Links</h5>
                 <ul class="list list-icons list-icons-sm">
-                    <li><i class="fas fa-angle-right"></i><a href="#" class="link-hover-style-1 ml-1"> FAQ's</a></li>
+                    <li><i class="fas fa-angle-right"></i><a href="#" class="link-hover-style-1 ml-1"> Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="col-lg-5">
@@ -53,11 +53,11 @@
                     <a href="https://www.github.com/AX99/" target="blank">AX99</a>
                 </div>
                 <div class="col-md-4">
-                    <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-big social-icons-opacity-light social-icons-icon-light mt-1">
+                    <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-opacity-light social-icons-icon-light mt-1">
                         <!-- change classes below to icon name and change references -->
                         <li class="social-icons-facebook"><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                         <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                        <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li class="social-icons-linkedin"><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
             </div>
