--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -3,9 +3,7 @@
         <div class="row py-5">
             <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                 <h5 class="text-5 text-transform-none font-weight-semibold text-color-light mb-4">Contact Details</h5>
-                <p class="text-4 mb-0">123 Porto Blvd, Suite 100</p>
-                <p class="text-4 mb-0">New York, NY</p>
-                <p class="text-4 mb-0">Phone: (800) 123 4567</p>
+                <p class="text-4 mb-0">Linkedin: <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" class="text-color-hover-primary">Jessica Ocquaye</a> </p>
                 <p class="text-4 mb-0">Email: <a href="mailto:info@jfmconsult.co.uk" class="text-color-primary">info@jfmconsult.co.uk</a></p>
             </div>
             <div class="col-6 col-lg-2 mb-5 mb-lg-0">
