--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -19,7 +19,7 @@
                 <h2 class="text-color-dark font-weight-bold text-8 mb-0 pt-0 mt-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="300" style="animation-delay: 300ms;">Jessica Ocquaye</h2>
             </div>
             <div class="overflow-hidden mb-3">
-                <p class="font-weight-bold text-primary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Leadership and OD consultant</p>
+                <p class="font-weight-bold text-primary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
             </div>
             <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam <a href="#">vehicula</a> sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam. Donec ante risus, dapibus sed lectus non, lacinia vestibulum nisi. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
             <p class="pb-3 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
@@ -31,7 +31,7 @@
                 <div class="col-sm-6 text-lg-right my-4 my-lg-0">
                     <strong class="text-uppercase text-1 mr-3 text-dark">follow me</strong>
                     <ul class="social-icons float-lg-right">
-                        <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+                        <li class="social-icons-twitter"><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
                         <li class="social-icons-linkedin"><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
@@ -82,7 +82,7 @@
                 </div>
             </div>
 
-            <div class="text-center"><button type="button" class="btn btn-outline btn-rounded btn-primary  btn-with-arrow mb-2" href="/coaching/">Learn More<span><i class="fas fa-chevron-right"></i></span></button></div>
+            <div class="text-center"><a class="btn btn-outline btn-rounded btn-primary  btn-with-arrow mb-2" href="/coaching/">Learn More<span><i class="fas fa-chevron-right"></i></span></a></div>
         </div>
     </div>
 </div>
