--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -7,32 +7,32 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 align-self-center p-static order-2 text-center">
-                <h1>About <strong> JFM Consult</strong></h1>
+                <h1 class="text-primary">About <strong> JFM Consult</strong></h1>
             </div>
         </div>
     </div>
 </section>
-<div class="container pt-5">
+<div class="container pt-5 border-bottom">
     <div class="row py-4 mb-2">
         <div class="col-md-7 order-2">
             <div class="overflow-hidden">
-                <h2 class="text-color-dark font-weight-bold text-8 mb-0 pt-0 mt-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="300" style="animation-delay: 300ms;">Jessica Ocquaye</h2>
+                <h2 class="text-color-primary font-weight-bold text-8 mb-0 pt-0 mt-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="300" style="animation-delay: 300ms;">Jessica Ocquaye</h2>
             </div>
             <div class="overflow-hidden mb-3">
-                <p class="font-weight-bold text-primary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
+                <p class="font-weight-bold text-tertiary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
             </div>
             <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam <a href="#">vehicula</a> sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam. Donec ante risus, dapibus sed lectus non, lacinia vestibulum nisi. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
-            <p class="pb-3 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
+            <p class="pb-3 text-tertiary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
             <div class="row align-items-center appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000" style="animation-delay: 1000ms;">
                 <div class="col-lg-6">
-                    <a href="/contact/" class="btn btn-modern btn-dark mt-3">Get In Touch</a>
+                    <a href="/contact/" class="btn btn-modern btn-primary bg-color-hover-tertiary text-color-hover-secondary text-secondary mt-3">Get In Touch</a>
                 </div>
                 <div class="col-sm-6 text-lg-right my-4 my-lg-0">
-                    <strong class="text-uppercase text-1 mr-3 text-dark">follow me</strong>
+                    <strong class="text-uppercase text-1 mr-3 text-primary">follow me</strong>
                     <ul class="social-icons float-lg-right">
-                        <li class="social-icons-twitter"><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="social-icons-linkedin"><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li class="social-icons-twitter"><a class="about-social-link bg-quaternary bg-color-hover-tertiary" href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li class="social-icons-linkedin"><a class="bg-quaternary about-social-link bg-color-hover-tertiary" href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
             </div> 
@@ -49,18 +49,18 @@
             <div class="row text-center pb-5">
                 <div class="col-md-9 mx-md-auto">
                     <div class="overflow-hidden mb-3">
-                        <h1 class="word-rotator slide font-weight-bold text-8 mb-0 appear-animation animated appear-animation-visible" data-appear-animation="maskUp">
+                        <h1 class="word-rotator slide text-tertiary font-weight-bold text-8 mb-0 appear-animation animated appear-animation-visible" data-appear-animation="maskUp">
                             <span>We are Porto, We </span>
-                            <span class="word-rotator-words bg-primary" style="width: 93.7812px;">
-                                <b class="is-hidden">Create</b>
-                                <b class="is-visible">Build</b>
-                                <b class="is-hidden">Develop</b>
+                            <span class="word-rotator-words" style="width: 93.7812px;">
+                                <b class="text-primary is-hidden">Create</b>
+                                <b class="text-primary is-visible">Build</b>
+                                <b class="text-primary is-hidden">Develop</b>
                             </span>
                             <span> Solutions</span>
                         </h1>
                     </div>
                     <div class="overflow-hidden mb-3">
-                        <p class="lead mb-0 appear-animation animated appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="200">
+                        <p class="lead mb-0 appear-animation animated appear-animation-visible text-quaternary" data-appear-animation="maskUp" data-appear-animation-delay="200">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo.
                         </p>
                     </div>
@@ -68,15 +68,15 @@
             </div>
 
             <div class="row mt-3 mb-5">
-                <div class="col-md-4 appear-animation animated appear-animation-visible" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="800">
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="800">
                     <h3 class="font-weight-bold text-4 mb-2">Our Mission</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu.</p>
                 </div>
-                <div class="col-md-4 appear-animation animated appear-animation-visible" data-appear-animation="fadeIn" data-appear-animation-delay="600">
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeIn" data-appear-animation-delay="600">
                     <h3 class="font-weight-bold text-4 mb-2">Our Vision</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nulla vel pellentesque consequat, ante nulla hendrerit arcu.</p>
                 </div>
-                <div class="col-md-4 appear-animation animated appear-animation-visible" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="800">
+                <div class="col-md-4 appear-animation animated appear-animation-visible about-section" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="800">
                     <h3 class="font-weight-bold text-4 mb-2">Why Us</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel consequat, ante nulla hendrerit arcu.</p>
                 </div>
