--- a/landing/templates/blog.html
+++ b/landing/templates/blog.html
@@ -9,7 +9,7 @@
             <div class="col text-center">
                 <div class="logo">
                     <a href="/">
-                        <img width="100" height="48" src="{% static "img/logo-corporate-4.png" %}" alt="Home">
+                        <img width="200" src="{% static "img/logo-bkd.jpg" %}" alt="Home">
                     </a>
                 </div>
             </div>
@@ -21,10 +21,10 @@
         </div>
         <div class="row pb-4">
             <div class="col text-center">
-                <h2 class="font-weight-normal text-7 mb-2"><strong class="font-weight-extra-bold">Blog Coming Soon</strong></h2>
-                <p class="mb-0 lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
+                <h2 class="font-weight-normal text-7 mb-2 text-primary"><strong class="font-weight-extra-bold">Blog Coming Soon</strong></h2>
+                <p class="mb-0 lead text-tertiary">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
                 <br>
-                <p class="mb-1">Enter your email below to sign up to our newsletter and be notified when our blog is live! </p>
+                <p class="mb-1 text-quaternary">Enter your email below to sign up to our newsletter and be notified when our blog is live! </p>
             </div>
         </div>
         <div class="row justify-content-center pt-2 pb-4">
@@ -39,7 +39,7 @@
                     <div class="input-group">
                         <input class="form-control" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text">
                         <span class="input-group-append">
-                            <button class="btn btn-light text-1 text-uppercase" type="submit">Subscribe Now</button>
+                            <button class="btn btn-primary text-secondary text-1 text-uppercase" type="submit">Subscribe Now</button>
                         </span>
                     </div>
                 </form>
