--- a/landing/templates/components/nav.html
+++ b/landing/templates/components/nav.html
@@ -4,7 +4,7 @@
 {% else %}
 <header id="header" class="header-effect-shrink" data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': true, 'stickyChangeLogo': true, 'stickyStartAt': 120, 'stickyHeaderContainerHeight': 70}">
 {% endif %}
-  <div class="header-body border-top-0">
+  <div class="header-body border-top-0 bg-color-secondary">
     
     <div class="header-container container">
       <div class="header-row">
@@ -12,7 +12,7 @@
           <div class="header-row">
             <div class="header-logo">
               <a href="/">
-                <img alt="Porto" width="100" height="48" data-sticky-width="82" data-sticky-height="40" src="{% static "img/logo-corporate-4.png"%}">
+                <img alt="Porto" width="100" height="48" data-sticky-width="82" data-sticky-height="40" src="{% static "img/logo-transparent.png"%}">
               </a>
             </div>
           </div>
@@ -57,10 +57,10 @@
             </div>
             <div class="header-nav-features header-nav-features-no-border header-nav-features-lg-show-border order-1 order-lg-2">
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in header-nav-top-icon"></i></a>
+                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in text-color-primary text-hover-light header-nav-top-icon"></i></a>
               </div>
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle pl-2"><i class="far fa-envelope header-nav-top-icon"></i></a>
+                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2"><i class="far fa-envelope text-color-primary text-hover-light header-nav-top-icon"></i></a>
               </div>
             </div>
           </div>
