--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="mt-0">
+<footer id="footer" class="bg-color-secondary mt-0">
     <div class="container my-4">
         <div class="row py-5">
             <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
@@ -40,22 +40,22 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright footer-copyright-style-2">
+    <div class="footer-copyright bg-color-secondary footer-copyright-style-2">
         <div class="container py-2">
             <div class="row py-4">
-                <div class="col mb-4 mb-lg-0">
+                <div class="col">
                     &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script> JFM Consult | Website by 
-                    <a href="https://www.github.com/AX99/" target="blank">AX99</a>
+                    <a class="text-color-hover-primary" href="https://www.github.com/AX99/" target="blank">AX99</a>
                 </div>
-                <div class="col-md-4">
+                <div class="col">
                     <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-opacity-light social-icons-icon-light mt-1">
                         <!-- change classes below to icon name and change references -->
-                        <li class="social-icons-facebook"><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
-                        <li class="social-icons-linkedin"><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="http://www.twitter.com/" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
             </div>
