--- a/landing/templates/components/slider.html
+++ b/landing/templates/components/slider.html
@@ -23,7 +23,7 @@
                     data-start="700"
                     data-fontsize="['22','22','22','40']"
                     data-lineheight="['25','25','25','45']"
-                    data-transform_in="y:[-50%];opacity:0;s:500;">GET TO MEET SIMPLY</div>
+                    data-transform_in="y:[-50%];opacity:0;s:500;">Welcome to</div>
 
                 <div class="tp-caption"
                     data-x="center" data-hoffset="['150','150','150','240']"
@@ -37,7 +37,7 @@
                     data-x="center"
                     data-y="center" data-voffset="['-60','-60','-60','-85']"
                     data-fontsize="['50','50','50','90']"
-                    data-lineheight="['55','55','55','95']">THE BEST HTML TEMPLATE</h1>
+                    data-lineheight="['55','55','55','95']">JFM Consult</h1>
 
                 <div class="tp-caption font-weight-light text-center"
                     data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2000,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
@@ -45,7 +45,7 @@
                     data-y="center" data-voffset="['0','0','0','-25']"
                     data-fontsize="['18','18','18','50']"
                     data-lineheight="['29','29','29','40']"
-                    style="color: #b5b5b5;">Trusted by over <strong class="text-color-light">30,000</strong> satisfied users, Porto is a huge sucess in the of<br>one of the world's largest MarketPlace.</div>
+                    style="color: #b5b5b5;">Uniting <strong class="text-color-light">Passion</strong> with <strong class="text-color-light">Purpose</strong></div>
 
                 <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold"
                     data-frames='[{"delay":4500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
@@ -111,7 +111,7 @@
                     data-frames='[{"delay":2500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-hash
                     data-hash-offset="85"
-                    href="#main"
+                    href="/coaching/"
                     data-x="center" data-hoffset="0"
                     data-y="center" data-voffset="['70','70','70','45']"
                     data-whitespace="nowrap"	
@@ -119,7 +119,7 @@
                     data-paddingtop="['15','15','15','40']"
                     data-paddingright="['45','45','45','110']"
                     data-paddingbottom="['15','15','15','40']"				 
-                    data-paddingleft="['45','45','45','110']">GET STARTED NOW!</a>
+                    data-paddingleft="['45','45','45','110']">How Coaching Works</a>
                 
             </li>
         </ul>
