--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -119,45 +119,45 @@
 <div class="container py-5 my-5" id="main">
     <div class="row justify-content-center text-center mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
         <div class="col-lg-8">
-            <h2 class="font-weight-bold mb-3 mt-3">We Can Help You</h2>
-            <p class="text-6 text-color-dark line-height-7 negative-ls-1 px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit phasellus blandit massa enim.</p>
-            <p class="opacity-9 text-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamos bibendum magna ex.</p>
+            <h2 class="font-weight-bold text-tertiary mb-3 mt-3">We Can Help You</h2>
+            <p class="text-6 text-color-primary line-height-7 negative-ls-1 px-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit phasellus blandit massa enim.</p>
+            <p class="opacity-9 text-4 text-tertiary">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamos bibendum magna ex.</p>
         </div>
     </div>
     <div class="row featured-boxes featured-boxes-style-4">
         <div class="col-md-6 col-lg-3">
             <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200">
                 <div class="box-content px-4">
-                    <i class="icon-featured icon-screen-tablet icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-dark pb-1 mb-2">Mobile Apps</h4>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
+                    <i class="icon-featured text-tertiary icon-screen-tablet icons text-12"></i>
+                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Mobile Apps</h4>
+                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-lg-3">
             <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeIn">
                 <div class="box-content px-4">
-                    <i class="icon-featured icon-layers icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-dark pb-1 mb-2">Creative Websites</h4>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
+                    <i class="icon-featured text-tertiary icon-layers icons text-12"></i>
+                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Creative Websites</h4>
+                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-lg-3">
             <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeIn">
                 <div class="box-content px-4">
-                    <i class="icon-featured icon-magnifier icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-dark pb-1 mb-2">SEO Optimization</h4>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
+                    <i class="icon-featured text-tertiary icon-magnifier icons text-12"></i>
+                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">SEO Optimization</h4>
+                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-lg-3">
             <div class="featured-box featured-box-primary featured-box-effect-4 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
                 <div class="box-content px-4">
-                    <i class="icon-featured icon-screen-desktop icons text-12"></i>
-                    <h4 class="font-weight-bold text-color-dark pb-1 mb-2">Brand Solutions</h4>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
+                    <i class="icon-featured text-tertiary icon-screen-desktop icons text-12"></i>
+                    <h4 class="font-weight-bold text-color-primary pb-1 mb-2">Brand Solutions</h4>
+                    <p class="text-color-hover-quaternary mb-0">Lorem ipsum dolor sit amet, coctetur adipiscing elit.</p>
                 </div>
             </div>
         </div>
@@ -165,25 +165,25 @@
 </div>
 
 
-<section class="section section-secondary border-0 py-0 m-0 z-index-master position-relative appear-animation" data-appear-animation="fadeIn">
+<section class="section section-tertiary border-0 py-0 m-0 z-index-master position-relative appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
             <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                <h2 class="font-weight-bold text-color-light text-7 mb-2">Who We Are</h2>
-                <p class="lead font-weight-light text-color-light text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
-                <p class="font-weight-light text-color-light text-2 mb-4 opacity-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendun magna ex, et faucibus lacus venenatis eget</p>
-                <a href="/about/" class="btn btn-dark-scale-2 btn-px-5 btn-py-2 text-2">LEARN MORE</a>
+                <h2 class="font-weight-bold text-color-primary text-7 mb-2">Who We Are</h2>
+                <p class="lead text-secondary text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit massa enim. Nullam id varius nunc.</p>
+                <p class="font-weight-light text-quaternary text-2 mb-4 opacity-9">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendun magna ex, et faucibus lacus venenatis eget</p>
+                <a href="/about/" class="btn btn-dark-scale-2 text-color-hover-secondary bg-color-hover-primary btn-px-5 btn-py-2 text-2">LEARN MORE</a>
             </div>
             <div class="col-9 offset-lg-1 col-lg-5 order-1 order-lg-2 scale-2">
-                <img class="img-fluid box-shadow-3 my-2 border-radius" src="{% static "img/gallery/gallery-1.jpg"%}" alt="">
+                <img class="img-fluid box-shadow-3 my-2 border-radius" src="{% static "img/logo-bkd.jpg"%}" alt="">
             </div>
         </div>
     </div>
 </section>
 
 
-<div class="container mt-5 py-5 border-bottom">
-    <h2 class="font-weight-bold mb-3 mt-3 text-center"> The Coaching Process</h2>
+<div class="container mt-5 py-5">
+    <h2 class="font-weight-bold mb-3 mt-3 text-quaternary text-center"> The Coaching Process</h2>
     <div class="row pt-4">
         <div class="col-lg-8 pb-2">
 
@@ -228,23 +228,23 @@
 
         </div>
         <div class="col-lg-4 px-5 pt-2 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="800">
-            <div class="testimonial testimonial-style-7 testimonial-primary py-5 mt-4">
+            <div class="testimonial testimonial-style-7 testimonial-primary py-5 mt-4 rounded-lg">
                 <blockquote>
-                    <p class="text-6 line-height-9 mb-0 mt-4">Your time is limited, so don’t waste it living someone else’s life.</p>
+                    <p class="text-6 text-tertiary line-height-9 mb-0 mt-4">Your time is limited, so don’t waste it living someone else’s life.</p>
                 </blockquote>
-                <a class="btn btn-outline btn-light text-light font-weight-bold mb-3" href="/coaching/">LEARN MORE</a>
+                <a class="btn btn-outline btn-tertiary font-weight-bold mb-3" href="/coaching/">LEARN MORE</a>
             </div>
         </div>
     </div>
 </div>
 
 
-<section class="section bg-color-grey-scale-1 border-0 appear-animation" data-appear-animation="fadeIn">
+<section class="section section-tertiary border-0 appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row">
             <div class="col appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
                 
-                <div class="owl-carousel owl-theme nav-bottom rounded-nav mb-0" data-plugin-options="{'items': 1, 'loop': false, 'autoHeight': true}">
+                <div class="owl-carousel owl-theme nav-bottom rounded-nav mb-0" data-plugin-options="{'items': 1, 'loop': false, 'nav': true, 'autoHeight': true}">
                     <div>
                         <div class="testimonial testimonial-style-2 testimonial-with-quotes testimonial-quotes-dark mb-0">
                             <div class="testimonial-author">
