--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,1 +1,70 @@
 /* Add here all your CSS customizations */
+
+/* Footericons */
+.social-icons li:hover {
+    background: #B38821;
+	color: #FFF !important;
+}
+
+#footer a:not(.btn):hover {
+    color: #B38821;
+
+}
+
+/* Loading splash screen */
+.logo-load {
+    margin: -120px 0 0 -35px;
+    text-align: center;
+    width: 70px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    z-index: 10000;
+}
+
+.bounce-loader .bounce1,
+.bounce-loader .bounce2,
+.bounce-loader .bounce3 {
+	background-color: #B38821;
+	border: 1px solid rgba(0, 0, 0, 0.327);
+}
+
+
+/* Homepage coaching section */
+.process .process-step-circle strong {
+	color: #4f6db3;
+}
+
+.process-step:hover h4{
+    color: #4f6db3
+}
+
+.process-step:hover p {
+    color: #b39d21;
+}
+
+.testimonial.testimonial-style-7 blockquote:before {
+    color: #4f6db3;
+}
+
+html .btn-outline.btn-tertiary:hover, html .btn-outline.btn-tertiary.hover {
+    color: #b39d21;
+}
+
+/* About section */
+html .btn-primary:hover, html .btn-primary.hover {
+    /* border-color: #d9a62e #d9a62e #B38821; */
+    border-color: #4f6db3
+}
+
+.about-social-link:hover i {
+    color: #B38821;
+}
+
+.about-section:hover h3 {
+    color: #4f6db3;
+}
+
+.about-section:hover p {
+    color: #b39d21;
+}
