--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -5,10 +5,10 @@
 
 <div class="text-center mt-5 mb-3">
     <div class="overflow-hidden mb-1">
-        <h2 class="font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;">The <strong class="font-weight-extra-bold">Coaching Process</strong> </h2>
+        <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;">The <strong class="font-weight-extra-bold">Coaching Process</strong> </h2>
     </div>
     <div class="overflow-hidden mb-4 pb-3">
-        <p class="mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
+        <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
     </div>
 </div>
 <div class="container-fluid">
