--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -31,7 +31,7 @@
                 <div class="alert alert-danger d-none" id="newsletterError"></div>
                 <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST" class="mw-100">
                     <div class="input-group input-group-rounded">
-                        <input class="form-control form-control-sm bg-light px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
+                        <input class="form-control form-control-sm px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
                         <span class="input-group-append">
                             <button class="btn btn-primary text-color-light text-2 py-3 px-4" type="submit"><strong>SUBSCRIBE!</strong></button>
                         </span>
