--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -7,25 +7,25 @@
 <div role="main" class="main">
     <div class="text-center mt-5 mb-3">
         <div class="overflow-hidden mb-1">
-            <h2 class="font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;"><strong class="font-weight-extra-bold">Contact</strong> Us</h2>
+            <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;"><strong class="font-weight-extra-bold ">Contact</strong> Us</h2>
         </div>
         <div class="overflow-hidden mb-4 pb-3">
-            <p class="mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
+            <p class="text-tertiary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
         </div>
     </div>
     <hr>
     <div class="container mt-3">
         <div class="row py-4">
             <div class="col-lg-6">
-                <h4>Get in <strong>Touch</strong></h4>
-                <p class="lead mb-0 text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4 class="text-tertiary">Get in <strong>Touch</strong></h4>
+                <p class="text-quaternary lead mb-0 text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget leo at velit imperdiet varius. In eu ipsum vitae velit congue iaculis vitae at risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                 <div class="appear-animation animated fadeIn appear-animation-visible pt-5" data-appear-animation="fadeIn" data-appear-animation-delay="800" style="animation-delay: 800ms;">
-                    <h4 class="mt-2 mb-1">Other <strong>Contacts</strong></h4>
+                    <h4 class="text-tertiary mt-2 mb-1">Other <strong>Contacts</strong></h4>
                     <ul class="list list-icons list-icons-style-2 mt-2">
-                        <li><i class="fab fa-linkedin-in"></i> <strong class="text-dark">LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank">Jessica Ocquaye MCIPD</a></li>
-                        <li><i class="fas fa-phone top-6"></i> <strong class="text-dark">Phone:</strong> (123) 456-789</li>
-                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-dark">Email:</strong> <a href="mailto:info@jfmconsult.com">info@jfmconsult.com</a></li>
+                        <li><i class="fab fa-linkedin-in"></i> <strong class="text-tertiary">LinkedIn:</strong> <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank">Jessica Ocquaye MCIPD</a></li>
+                        <li><i class="fas fa-phone top-6"></i> <strong class="text-tertiary">Phone:</strong> (123) 456-789</li>
+                        <li><i class="fas fa-envelope top-6"></i> <strong class="text-tertiary">Email:</strong> <a href="mailto:info@jfmconsult.com">info@jfmconsult.com</a></li>
                     </ul>
                 </div>
                 
@@ -43,24 +43,24 @@
                     
                     <div class="form-row">
                         <div class="form-group col">
-                            <label class="required font-weight-bold text-dark text-2">Full Name</label>
-                            <input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" id="name" required="">
+                            <label class="required font-weight-bold text-tertiary text-2">Full Name</label>
+                            <input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="bg-color-grey-scale-10 form-control" name="name" id="name" required="">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-lg-6">
-                            <label class="required font-weight-bold text-dark text-2">Email Address</label>
-                            <input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" name="email" id="email" required="">
+                            <label class="required font-weight-bold text-tertiary text-2">Email Address</label>
+                            <input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="bg-color-grey-scale-10 form-control" name="email" id="email" required="">
                         </div>
                         <div class="form-group col-lg-6">
-                            <label class="font-weight-bold text-dark text-2">Phone Number</label>
-                            <input type="text" value="" data-msg-required="Please enter your phone number." maxlength="14" class="form-control" name="phone" id="phone" required="">
+                            <label class="font-weight-bold text-tertiary text-2">Phone Number</label>
+                            <input type="text" value="" data-msg-required="Please enter your phone number." maxlength="14" class="bg-color-grey-scale-10 form-control" name="phone" id="phone" required="">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col">
-                            <label class="required font-weight-bold text-dark text-2">Message</label>
-                            <textarea maxlength="5000" data-msg-required="Please enter your message." rows="5" class="form-control" name="message" id="message" required=""></textarea>
+                            <label class="required font-weight-bold text-tertiary text-2">Message</label>
+                            <textarea maxlength="5000" data-msg-required="Please enter your message." rows="5" class="bg-color-grey-scale-10 form-control" name="message" id="message" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-row">
